2007-03-26  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_new): Initialize flushed and
	nodata state variables.

	* gmime/gmime-content-type.c
	(g_mime_content_type_new_from_string): Shouldn't need to
	g_strstrip() the type, is_ttoken() won't match against lwsp
	chars. Also, instead of simply scanning past lwsp between some
	tokens, use decode_lwsp() between *all* tokens so that we handle
	comments as well (not that there should be any...).

	* gmime-2.0.pc.in: Got rid of the redundant @LIBS@ which contained
	the same value as @GMIME_LIBS@.

	* configure.in: Added configure checks for large file support.

2007-03-26  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime-param.c: #include "gmime-parse-utils.h" and got rid of
	this file's own decode_lwsp() implementation.

	* internet-address.c: #include "gmime-parse-utils.h" which is
	where a bunch of the parser functions have been moved from here.

	* gmime-utils.c: #include "gmime-parse-utils.h" for decode_lwsp()
	and decode_domain()
	(decode_addrspec): Moved here from internet-address.c which had
	been exporting the symbol previously (so that decode_domain didn't
	have to be copy/pasted). Now this function can be made static -
	yay! No more exporting un-namespaced symbols!

	* gmime/gmime-message.c: #include "gmime-parse-utils.h" for
	decode_lwsp()

	* gmime/gmime-parse-utils.[c,h]: New source files containing some
	parse utility functions that had been copy/pasted between several
	source files previously.

2007-03-25  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.in: Bumped version to 2.2.5

2007-03-25  Jeffrey Stedfast  <fejj@gnome.org>

	* tests/Makefile.am (local-check): Simplified.

	* tests/test-streams.c: Generate our own test data if we aren't
	given any.

	* tests/test-cat.c: Updated for the new Makefile.am rule.

	* gmime/gmime-stream-mmap.c (stream_length): Fixed to return the
	correct length when bound_end == -1 but bound_start != 0.